# CourseWorkSQL

./: README.md  database.ini.sample  pyproject.toml
tests/: test_db_saver.py
